# mc_impact_constraints

./: .gitlab-ci.yml  BoundJointTorqueJump.cpp  BoundJointTorqueJump.h  BoundJointVelocityJump.cpp  BoundJointVelocityJump.h  CMakeLists.txt  COPInsideContactAreaWithImpulse.cpp  COPInsideContactAreaWithImpulse.h  ContactWrenchMatrixToLambdaMatrix.cpp  ContactWrenchMatrixToLambdaMatrix.h  Doxyfile  MinimumContactWrench.h  PositiveContactForceWithImpulse.cpp  PositiveContactForceWithImpulse.h  ZMPInsideSupportPolygonWithImpulse.cpp  ZMPInsideSupportPolygonWithImpulse.h  ZeroSlippageWithImpulse.cpp  ZeroSlippageWithImpulse.h  copWithImpulse.cpp  copWithImpulse.h  frictionWithImpulse.cpp  frictionWithImpulse.h  license-txt  mc_impact_constraintsConfig.cmake  zmpWithImpulse.cpp  zmpWithImpulse.h
include/: BoundJointTorqueJump.h  BoundJointVelocityJump.h  COPInsideContactAreaWithImpulse.h  COPWithImpulse.h  ConstraintUtils.h  ContactWrenchMatrixToLambdaMatrix.h  DCMWithImpulse.h  FrictionWithImpulse.h  ImpactAwareCOMVelConstraint.h  ImpactAwareFloatingBaseConstraint.h  ImpactAwareFloatingBaseContraint.h  ImpactAwareSustainedContactConstraint.h  ImpactAwareZMPConstraint.h  MinimumContactWrench.h  SupportPolygon.h  ZMPInsideSupportPolygonWithImpulse.h  ZMPWithImpulse.h  ZeroSlippageWithImpulse.h  constraintUtils.h  copWithImpulse.h  dcmWithImpulse.h  frictionWithImpulse.h  supportPolygon.h  zmpWithImpulse.h
src/: BoundJointTorqueJump.cpp  BoundJointVelocityJump.cpp  CMakeLists.txt  COPInsideContactAreaWithImpulse.cpp  COPWithImpulse.cpp  ConstraintUtils.cpp  ContactWrenchMatrixToLambdaMatrix.cpp  DCMWithImpulse.cpp  FrictionWithImpulse.cpp  ImpactAwareCOMVelConstraint.cpp  ImpactAwareFloatingBaseConstraint.cpp  ImpactAwareSustainedContactConstraint.cpp  ImpactAwareZMPConstraint.cpp  SupportPolygon.cpp  ZMPInsideSupportPolygonWithImpulse.cpp  ZMPWithImpulse.cpp  ZeroSlippageWithImpulse.cpp  constraintUtils.cpp  copWithImpulse.cpp  dcmWithImpulse.cpp  frictionWithImpulse.cpp  supportPolygon.cpp  zmpWithImpulse.cpp
